# grading_calculator

./: CMakeLists.txt  mainwindow.ui
